# zomby_startup

./: README.md  package.xml  setup.cfg  setup.py
ZOMBY_arduino/zomby_rc_test/: zomby_rc_test.ino
ZOMBY_arduino/zomby_test/: zomby_test.ino
arduino_code/motor_control/: motor_control.ino  test.py
zomby_motor_control/: Zomby.py
zomby_motor_control/old/: Motor.py  Motor_test.py  brainstorm_old.txt  main_old.py
zomby_startup/: zomby_startup.py
zomby_startup/zomby_motor_control/: Zomby.py  Zomby_test.py  main.ino
zomby_startup/zomby_motor_control/old/: brainstorm.txt  main_old.ino
