<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zomby_startup</name>
  <version>0.0.1</version>
  <description>This node will be run on the zomby robot to convert cmd_vel
  to communication on the usb cord from the computer to the arduino</description>
  <maintainer email="usurobotics@gmail.com">usurobotics</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
